--- a/page2.html
+++ b/page2.html
@@ -163,8 +163,8 @@
   <img src="tkachukk/fotochka.jpg" class="float-left" alt="Paris" width="304" height="236"> 
    <img src="tkachukk/pivas.jpg" class="float-left" alt="Paris" width="304" height="236"> 
    <img src="tkachukk/smoke.jpg" class="float-left" alt="Paris" width="304" height="236"> 
-   <img src="tkachukk/pivas1.jpg" class="float-left" alt="Paris" width="304" height="236"> 
-   <img src="tkachukk/revo.jpg" class="float-centr" alt="Paris" width="304" height="236"> 
+   <img src="tkachukk/revo.jpg" class="float-left" alt="Paris" width="304" height="236"> 
+   <img src="tkachukk/pivas1.jpg" class="float-centr" alt="Paris" width="304" height="236"> 
 </div>
 </body>
 </html>
