--- a/page2.html
+++ b/page2.html
@@ -167,4 +167,9 @@
    <img src="tkachukk/pivas1.jpg" class="float-centr" alt="Paris" width="304" height="236"> 
 </div>
 </body>
+    <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+  <i class="fa fa-instagram w3-hover-opacity"></i>
+  <p class="w3-medium"> <a href="https://www.instagram.com/pub_oldskull/" href="default.asp" 
+      target="_blank"> our instagram </a></p>
+</footer>
 </html>
