--- a/page2.html
+++ b/page2.html
@@ -52,7 +52,7 @@
       <img src="tkachukk/old.jpg" alt="" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="tkachukk/beer1" alt="" width="1100" height="500">
+      <img src="tkachukk/beer1.jpg" alt="" width="1100" height="500">
     </div>
   </div>
   <!-- Left and right controls -->
